# multimodal-research-teaching-assistant

./: .env.example  .gitignore  .markdownlint.json  .pymarkdown.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RESEARCH_NOTES.md  compose.yaml  feat-branch-prompt.md  notebook-to-production-steps.md  phase-update-prompt.md  production-ready.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/api/: main.py
app/core/: config.py
app/ingestion/: pdf_loader.py
apps/api/: deps.py  main.py
apps/api/routers/: ask.py  documents.py  figures.py  upload.py
apps/api/schemas/: __init__.py  ask.py  documents.py  figures.py  upload.py
apps/streamlit/: app.py
configs/: dev.yaml  test.yaml
data/: golden_qa.yaml
docker/: Dockerfile.api  Dockerfile.streamlit  docker-compose.yml
docs/: observability.md
docs/adr/: ADR-001-src-layout-and-library-design.md  ADR-002-vector-store-faiss-vs-qdrant.md  ADR-003-llm-provider-strategy.md  ADR-004-embedding-model-selection.md  ADR-005-rag-architecture.md  ADR-006-evaluation-framework.md  ADR-007-cross-encoder-reranking.md  ADR-007-opentelemetry-tracing.md
docs/architecture/: overview.md
frontend/: streamlit_app.py
notebooks/production/: 2026-05-25-phase00-foundations-and-setup.ipynb  2026-05-25-phase01-pdf-ingestion.ipynb  2026-05-25-phase02-chunking-strategies.ipynb  2026-05-25-phase03-embeddings-and-faiss.ipynb  2026-05-25-phase04-rag-pipeline.ipynb  2026-05-25-phase05-fastapi-backend.ipynb  2026-05-25-phase06-streamlit-frontend.ipynb  2026-05-25-phase07-figure-extraction-and-vlm.ipynb  2026-05-25-phase08-teaching-modes-and-prompts.ipynb  2026-05-25-phase09-evaluation-logging-docker.ipynb
notebooks/theory/: TermsAndConcepts.md
notebooks/tutorials/: 2026-05-25-phase00-foundations-and-setup.ipynb  2026-05-25-phase01-pdf-ingestion.ipynb  2026-05-25-phase02-chunking-strategies.ipynb  2026-05-25-phase03-embeddings-and-faiss.ipynb  2026-05-25-phase04-rag-pipeline.ipynb  2026-05-25-phase05-fastapi-backend.ipynb  2026-05-25-phase06-streamlit-frontend.ipynb  2026-05-25-phase07-figure-extraction-and-vlm.ipynb  2026-05-25-phase08-teaching-modes-and-prompts.ipynb  2026-05-25-phase09-evaluation-logging-docker.ipynb
scripts/: ingest.py
src/mrta/: __init__.py
src/mrta/core/: __init__.py  config.py  exceptions.py  llm.py  rag_pipeline.py  schemas.py
src/mrta/evaluation/: __init__.py  eval_pipeline.py  metrics.py
src/mrta/generation/: __init__.py
src/mrta/ingestion/: __init__.py  chunker.py  figure_extractor.py  pdf_loader.py
src/mrta/multimodal/: __init__.py  clip_embedder.py  vlm_client.py
src/mrta/observability/: __init__.py  logging.py  tracing.py
src/mrta/prompts/: __init__.py  _base.j2  beginner.j2  expert.j2  explain.j2  interview.j2  lecture_notes.j2  quiz.j2  rag.j2
src/mrta/retrieval/: __init__.py  embedder.py  reranker.py  vector_store.py
tests/: conftest.py
tests/evaluation/: README.md  conftest.py  test_citation_coverage.py  test_rag_gates.py  test_retrieval_metrics.py
tests/evaluation/baselines/: retrieval_metrics.json
tests/unit/: test_api.py  test_chunker.py  test_clip_embedder.py  test_exceptions.py  test_figure_extractor.py  test_ingestion.py  test_metrics.py  test_prompts.py  test_rag_pipeline.py  test_reranker.py  test_tracing.py  test_vector_store.py
