[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mrta"]

# ---------------------------------------------------------------------------
# Package metadata
# ---------------------------------------------------------------------------
[project]
name = "mrta-rag"
version = "0.1.0"
description = "A local citation-aware research and teaching assistant for technical PDFs"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"

authors = [
    { name = "Sanja Damjanovic" },
]

# Core dependencies — always installed. Heavy ML libs live in extras below.
dependencies = [
    # Config / env
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
    # Prompts
    "jinja2>=3.1.4",
    # Observability
    "structlog>=24.1.0",
    "opentelemetry-api>=1.25.0",
    # LLM client (Ollama server is an external runtime requirement)
    "ollama>=0.2.0",
    # HTTP client — used by Embedder for Ollama embeddings
    "httpx>=0.27.0",
    # Numerics — used by Embedder and VectorStore
    "numpy>=1.26.0",
    # Image handling — used by VLMClient and figure extractor
    "Pillow>=10.0.0",
]

# project.urls must come after all scalar/array keys in [project]
[project.urls]
Homepage = "https://github.com/sanya2025/multimodal-research-teaching-assistant"
Repository = "https://github.com/sanya2025/multimodal-research-teaching-assistant"
Issues = "https://github.com/sanya2025/multimodal-research-teaching-assistant/issues"

# ---------------------------------------------------------------------------
# Optional dependency groups
# Install with: pip install "mrta-rag[group]"
# ---------------------------------------------------------------------------
[project.optional-dependencies]

# PDF parsing and figure extraction
pdf = [
    "PyMuPDF>=1.24.0",
    "pdfplumber>=0.11.0",
]

# Text chunking + embedding + vector search
retrieval = [
    "sentence-transformers>=2.7.0",
    "tiktoken>=0.7.0",
    "langchain-text-splitters>=0.2.0",
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-community>=0.2.0",
    "faiss-cpu>=1.8.0",
]

# Local LLM inference via HuggingFace (heavy — torch, transformers)
llm = [
    "transformers>=4.41.0",
    "accelerate>=0.30.0",
    "torch>=2.2.0",
    "huggingface-hub>=0.23.0",
]

# Multimodal — CLIP image embeddings + VLM support
multimodal = [
    "open-clip-torch>=2.24.0",
    "einops>=0.8.0",
]

# OCR fallback for scanned PDFs
ocr = [
    "unstructured>=0.13.0",
    "pytesseract>=0.3.10",
]

# Production vector store swap
qdrant = [
    "qdrant-client>=1.9.0",
]

# FastAPI backend
api = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
]

# Streamlit frontend
streamlit = [
    "streamlit>=1.35.0",
]

# Evaluation
eval = [
    "ragas>=0.2,<0.3",
    "deepeval>=0.21.0",
    "nest-asyncio>=1.6.0",
]

# OpenTelemetry tracing (console + OTLP/gRPC export)
otel = [
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
]

# Development tooling + notebooks
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "black>=24.4.0",
    "build>=1.2.0",
    "twine>=5.0.0",
    "jupyterlab>=4.2.0",
    "ipykernel>=6.29.0",
    "matplotlib>=3.8.0",
    "pandas>=2.2.0",
    "tqdm>=4.66.0",
    "watchdog>=4.0.0",
    "mypy>=1.10.0",
    "pip-audit>=2.7.0",
    "opentelemetry-sdk>=1.25.0",
]

# Everything
all = [
    "mrta-rag[pdf,retrieval,llm,multimodal,ocr,qdrant,api,streamlit,eval,otel,dev]",
]

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = ["tests/", "notebooks/"]

[tool.black]
line-length = 100
target-version = ["py311"]
